2004-06-07  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c: Rework line-detection code so multiple balls
	can be dropped before checking. Fixes bug #142072.

2004-04-25  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c: 
	* glines.desktop.in: Rename to "Five or More".

2004-03-03  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/C/glines.xml:	
	* help/C/figures/*: Updates for 2.6. 

2004-02-14  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c (load_image): Removed the _has_separator calls from message
	dialogs.

2004-02-11  Richard Hoelscher  <rah@rahga.com>

	* glines.c (bg_color_callback): Set saving background color as
	a 12-digit hex triplet. Bug #134179.

2004-02-11  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c (game_about_callback): translator_credits ->
	translator-credits.

2004-01-29  Callum McKenzie  <callum@physics.otago.ac.nz>

	* shapes.svg: Updates from Richard Hoelscher.

2004-01-21  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c (button_press_event): Ignore double and triple
	clicks. Just like for Mahjongg. Richard Hoelscher pointed this out
	in bug #132010.

2004-01-20  Callum McKenzie  <callum@physics.otago.ac.nz>

	* balls.svg: Reworked version from Richard Hoelscher. Smaller file
	and wobble-free graphics.

2004-01-10  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c (field_expose_event): Shrink the event area by one so
	we don't try drawing grid cells that aren't there. Jon McCann
	spotted this.
	
2004-01-09  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c (check_goal): Make sure we don't miss "accidental"
	completions. Fixes bug #130291.

	* Makefile.am (pixmap_DATA): Added shapes.svg; a colour-blind
	friendly theme.

2004-01-08  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.schemas.in:
	* glines.h:
	* glines.c: Remember the window size. Removed some unused
	code. Reworked the layout of the "Next balls" and "Score" 
	section.
